crates/parser/src/tests/snapshots/kclvm_parser__tests__error_recovery__type_alias_recovery_4.snap
---
source: parser/src/tests/error_recovery.rs
expression: "crate::tests::parsing_module_string(r#\"type .pkg_path.\"#)"
---
Module {
    filename: "",
    doc: None,
    body: [
        Node {
            node: TypeAlias(
                TypeAliasStmt {
                    type_name: Node {
                        node: Identifier {
                            names: [],
                            pkgpath: "",
                            ctx: Load,
                        },
                        filename: "",
                        line: 1,
                        column: 5,
                        end_line: 1,
                        end_column: 15,
                    },
                    type_value: Node {
                        node: "any",
                        filename: "",
                        line: 1,
                        column: 15,
                        end_line: 1,
                        end_column: 15,
                    },
                    ty: Node {
                        node: Any,
                        filename: "",
                        line: 1,
                        column: 15,
                        end_line: 1,
                        end_column: 15,
                    },
                },
            ),
            filename: "",
            line: 1,
            column: 5,
            end_line: 1,
            end_column: 15,
        },
    ],
    comments: [],
}
